--- a/Angular/Orenda-Ecommerce/src/app/pages/manage-address/province/province.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/pages/manage-address/province/province.component.html
@@ -4,19 +4,22 @@
             <h4 style="margin-bottom: .8rem;" class="card-title">Bộ lọc tìm kiếm</h4>
         </div>
         <div class="w-100 d-flex justify-content-between">
-            <!-- <div class="">
-                <select style="color: black;" class="form-control" [(ngModel)]="itemSelectedStatus"
-                    (change)="selectedStatus()">
-                    <option [value]="true">Hoạt động</option>
-                    <option [value]="false">Ngưng hoạt động</option>
-                </select>
-            </div> -->
-            <div class="w-25">
-                <input class="form-control" id="textSearch" name="textSearch" [(ngModel)]="textSearch" type="text"
-                    (keyup.enter)="searchProvinces()" placeholder="Enter province name or code">
+            <div class="row w-50">
+                <div class="col-4">
+                    <select style=" color: black;" class="form-control" [(ngModel)]="itemSelectedStatus"
+                        (change)="selectedStatus()">
+                        <option [ngValue]="undefined">Trạng thái</option>
+                        <option [ngValue]="true">Hoạt động</option>
+                        <option [ngValue]="false">Ngưng hoạt động</option>
+                    </select>
+                </div>
+                <div class="col-8">
+                    <input class="form-control" id="textSearch" name="textSearch" [(ngModel)]="textSearch" type="text"
+                        (keyup.enter)="searchProvinces()" placeholder="Enter province name or code">
+                </div>
             </div>
             <button (click)="updateOrCreateAddress()" style=" height: fit-content;" type="button"
-                class="btn btn-primary mr-2">Create</button>
+                class="btn btn-primary">Create</button>
         </div>
     </div>
 </div>
@@ -26,14 +29,11 @@
             <div class="w-100 d-flex">
                 <div>
                     <h4 style="margin-bottom: .8rem;" class="card-title">Danh sách các tỉnh và thành phố</h4>
-                    <p class="card-description">
-                        Basic form layout
-                    </p>
                 </div>
             </div>
         </div>
         <div class="table-responsive">
-            <ng-container *ngIf="provinces && provinces.length > 0">
+            <ng-container *ngIf="provinces && provinces.length > 0 ;else noData">
                 <table class="table">
                     <thead>
                         <tr>
@@ -50,18 +50,31 @@
                             <td>{{ add.cap }}</td>
                             <td>{{ add.provinceName }}</td>
                             <td>{{ add.provinceCode }}</td>
-                            <td>{{ add.isActive }}</td>
+                            <td>
+                                <ng-container *ngIf="add.isActive; else noActive">
+                                    <label class="badge badge-success">Hoạt động</label>
+                                </ng-container>
+                                <ng-template #noActive>
+                                    <label class="badge badge-warning">Ngưng hoạt động</label>
+                                </ng-template>
+                            </td>
                             <td>
                                 <button (click)="updateOrCreateAddress(add)" style="margin-right: 10px;" type="button"
-                                    class="btn btn-primary">Update</button>
+                                    class="btn btn-outline-primary btn-fw">Update</button>
                                 <button (click)='deleteAddress(add.id)' type="button"
-                                    class="btn btn-danger">Delete</button>
+                                    class="btn btn-outline-danger btn-fw">Delete</button>
                             </td>
                         </tr>
                     </tbody>
                 </table>
-                <pagination-controls (pageChange)="onPageChange($event)" [autoHide]="true"></pagination-controls>
+                <pagination-controls class="custom-pagination" previousLabel="Pre" nextLabel="Next"
+                    (pageChange)="onPageChange($event)" [autoHide]="true">
+                </pagination-controls>
             </ng-container>
+
+            <ng-template #noData>
+                <h4 class="card-title text-danger">No data result</h4>
+            </ng-template>
         </div>
     </div>
 </div>
