--- a/Angular/Orenda-Ecommerce/src/app/pages/manage-address/ward/ward.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/pages/manage-address/ward/ward.component.html
@@ -7,8 +7,9 @@
             <div class="col">
                 <select style="color: black;" class="form-control" [(ngModel)]="itemSelectedStatus"
                     (change)="selectedStatus()">
-                    <option [value]="true">Hoạt động</option>
-                    <option [value]="false">Ngưng hoạt động</option>
+                    <option [ngValue]="undefined">Trạng thái</option>
+                    <option [ngValue]="true">Hoạt động</option>
+                    <option [ngValue]="false">Ngưng hoạt động</option>
                 </select>
             </div>
             <div class="col">
@@ -28,7 +29,7 @@
                     (keyup.enter)="searchNameCodeWard()" placeholder="Enter province name or code">
             </div>
             <button (click)="updateOrCreateAddress()" style=" height: fit-content;" type="button"
-                class=" btn btn-primary mr-2">Create</button>
+                class=" btn btn-primary">Create</button>
         </div>
     </div>
 </div>
@@ -42,7 +43,7 @@
             </div>
         </div>
         <div class="table-responsive">
-            <ng-container *ngIf="wards && wards.length > 0">
+            <ng-container *ngIf="wards && wards.length > 0;else noData">
                 <table class="table">
                     <thead>
                         <tr>
@@ -63,18 +64,30 @@
                             <td>{{ add.wardName }}</td>
                             <td>{{ add.districtCode }}</td>
                             <td>{{ add.provinceCode }}</td>
-                            <td>{{ add.isActive }}</td>
+                            <td>
+                                <ng-container *ngIf="add.isActive; else noActive">
+                                    <label class="badge badge-success">Hoạt động</label>
+                                </ng-container>
+                                <ng-template #noActive>
+                                    <label class="badge badge-warning">Ngưng hoạt động</label>
+                                </ng-template>
+                            </td>
                             <td>
                                 <button (click)="updateOrCreateAddress(add)" style="margin-right: 10px;" type="button"
-                                    class="btn btn-primary">Update</button>
+                                    class="btn btn-outline-primary btn-fw">Update</button>
                                 <button (click)='deleteAddress(add.id)' type="button"
-                                    class="btn btn-danger">Delete</button>
+                                    class="btn btn-outline-danger btn-fw">Delete</button>
                             </td>
                         </tr>
                     </tbody>
                 </table>
-                <pagination-controls (pageChange)="onPageChange($event)" [autoHide]="true"></pagination-controls>
+                <pagination-controls class="custom-pagination" previousLabel="Pre" nextLabel="Next"
+                    (pageChange)="onPageChange($event)" [autoHide]="true"></pagination-controls>
             </ng-container>
+
+            <ng-template #noData>
+                <h4 class="card-title text-danger">No data result</h4>
+            </ng-template>
         </div>
     </div>
 </div>
