--- a/Angular/Orenda-Ecommerce/src/app/layouts/header/header.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/layouts/header/header.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
     <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-        <a class="navbar-brand brand-logo mr-5" href="index.html"><img src="../../../assets/themes/images/logo.svg"
-                class="mr-2" alt="logo" /></a>
-        <a class="navbar-brand brand-logo-mini" href="index.html"><img src="../../../assets/themes/images/logo-mini.svg"
-                alt="logo" /></a>
+        <a class="navbar-brand brand-logo mr-5" href="javascript:void(0)"><img
+                src="../../../assets/themes/images/logo.svg" class="mr-2" alt="logo" /></a>
+        <a class="navbar-brand brand-logo-mini" href="javascript:void(0)"><img
+                src="../../../assets/themes/images/logo-mini.svg" alt="logo" /></a>
     </div>
     <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
         <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
@@ -24,7 +24,7 @@
         </ul>
         <ul class="navbar-nav navbar-nav-right">
             <li class="nav-item dropdown">
-                <a class="nav-link count-indicator dropdown-toggle" id="notificationDropdown" href="#"
+                <a class="nav-link count-indicator dropdown-toggle" id="notificationDropdown" href="javascript:void(0)"
                     data-toggle="dropdown">
                     <i class="icon-bell mx-0"></i>
                     <span class="count"></span>
@@ -74,7 +74,8 @@
                 </div>
             </li>
             <li class="nav-item nav-profile dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
+                <a class="nav-link dropdown-toggle" href="javascript:void(0)" data-toggle="dropdown"
+                    id="profileDropdown">
                     <img src="../../../assets/themes/images/faces/face28.jpg" alt="profile" />
                 </a>
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
@@ -89,7 +90,7 @@
                 </div>
             </li>
             <li class="nav-item nav-settings d-none d-lg-flex">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="javascript:void(0)">
                     <i class="icon-ellipsis"></i>
                 </a>
             </li>
