--- a/Angular/Orenda-Ecommerce/src/app/layouts/layouts.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/layouts/layouts.component.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
   <div class="container-fluid page-body-wrapper">
     <app-sidebar-skins></app-sidebar-skins>
-    <app-sidebar class="sidebar sidebar-offcanvas" id="sidebar"></app-sidebar>
+    <app-sidebar></app-sidebar>
     <div class="main-panel">
       <div class="content-wrapper">
         <router-outlet></router-outlet>
@@ -11,4 +11,3 @@
     </div>
   </div>
 </div>
-<!-- <app-loading [isLoading]="(isLoading$ | async) ?? false"></app-loading> -->
