--- a/Angular/Orenda-Ecommerce/src/app/shared/loading/loading.component.scss
+++ b/Angular/Orenda-Ecommerce/src/app/shared/loading/loading.component.scss
@@ -16,7 +16,7 @@
   width: 50px;
   height: 50px;
   border: 6px solid #ccc;
-  border-top: 6px solid #007bff;
+  border-top: 6px solid #4b49ac;
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
