--- a/Angular/Orenda-Ecommerce/src/app/pages/login/login.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/pages/login/login.component.html
@@ -9,25 +9,29 @@
             </div>
             <h4>Hello! let's get started</h4>
             <h6 class="font-weight-light">Sign in to continue.</h6>
-            <form class="pt-3">
+            <form [formGroup]='formLogin' (ngSubmit)="onSubmitLogin()" class="pt-3">
               <div class="form-group">
-                <input type="text" id="username" [(ngModel)]="username" name="username" class="form-control" />
+                <input type="text" id="email" formControlName="email" name="email" class="form-control"
+                  placeholder="Email..."
+                  [class.is-invalid]="formLogin.get('email')?.invalid && formLogin.get('email')?.touched" />
+
+                <div *ngIf="formLogin.get('email')?.invalid && formLogin.get('email')?.touched"
+                  class="invalid-feedback">
+                  Email is required and true format.
+                </div>
               </div>
               <div class="form-group">
-                <input type="password" id="password" [(ngModel)]="password" name="password" class="form-control" />
+                <input type="password" id="password" formControlName="password" name="password" class="form-control"
+                  placeholder="Password..." />
               </div>
               <div class="mt-3">
-                <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="javascript:void(0)"
-                  (click)="submitlogin()">SIGN IN</a>
+                <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" type="submit">SIGN
+                  IN</button>
               </div>
               <div class="my-2 d-flex justify-content-between align-items-center">
                 <div class="form-check">
-                  <!-- <label class="form-check-label text-muted">
-                    <input type="checkbox" class="form-check-input">
-                    Keep me signed in
-                  </label> -->
                 </div>
-                <a href="javascript:void(0)" class="auth-link text-black">Forgot password?</a>
+                <a routerLink='/forgot-password' class="auth-link text-black">Forgot password?</a>
               </div>
               <div class="mb-2">
                 <button disabled type="button" class="btn btn-block btn-facebook auth-form-btn">
@@ -35,7 +39,7 @@
                 </button>
               </div>
               <div class="text-center mt-4 font-weight-light">
-                Don't have an account? <a href="javascript:void(0)" class="text-primary">Create</a>
+                Don't have an account? <a routerLink="/register" class="text-primary">Create</a>
               </div>
             </form>
           </div>
