phần chỉnh sửa product page

--- a/Angular/Orenda-Ecommerce/src/app/pages/product/form-create-update-product/form-create-update-product.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/pages/product/form-create-update-product/form-create-update-product.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<!-- <div class="card">
     <div class="card-body">
         <h4 class="card-title">{{titleForm}}</h4>
         <p class="card-description">
@@ -33,14 +33,8 @@
                     </option>
                 </select>
             </div>
-            <!-- <div class="form-check form-check-flat form-check-primary">
-                <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input">
-                    Active
-                </label>
-            </div> -->
             <button (click)="submitForm()" type="" class="btn btn-primary mr-2">Submit</button>
             <button (click)="cancelForm()" class="btn btn-light">Cancel</button>
         </div>
     </div>
-</div>
+</div> -->
