--- a/Angular/Orenda-Ecommerce/src/app/pages/product/product-page/product-page.component.html
+++ b/Angular/Orenda-Ecommerce/src/app/pages/product/product-page/product-page.component.html
@@ -2,74 +2,106 @@
   <div class="col-lg-8">
     <div class="card">
       <div class="card-body">
-        <div style="display: flex; justify-content: space-between" class="w-100">
-          <h4 class="card-title">Table Product</h4>
-          <button type="button" class="btn btn-inverse-primary btn-fw">
-            Add Product
-          </button>
+        <div>
+          <h4 style="margin-bottom: .8rem;" class="card-title">Bộ lọc tìm kiếm</h4>
+        </div>
+        <div class="row w-100 d-flex justify-content-between">
+          <div class="col">
+            <select style="color: black;" class="form-control" [(ngModel)]="itemSelectedStatus"
+              (change)="selectedStatus()">
+              <option [ngValue]="undefined">Trạng thái</option>
+              <option [ngValue]="true">Hoạt động</option>
+              <option [ngValue]="false">Ngưng hoạt động</option>
+            </select>
+          </div>
+          <div class="col w-25">
+            <input class="form-control" id="textSearch" name="textSearch" [(ngModel)]="textSearch" type="text"
+              (keyup.enter)="searchNameProduct()" placeholder="Enter product name">
+          </div>
+          <button (click)="addProduct()" style=" height: fit-content;" type="button"
+            class="btn btn-primary">Create</button>
+        </div>
+        <div style="display: flex; justify-content: space-between" class="w-100 mt-3">
         </div>
         <p class="card-description">Danh sách sản phẩm</p>
         <div class="table-responsive">
-          <table class="table table-hover">
-            <thead>
-              <tr>
-                <th>Tên sản phẩm</th>
-                <th>Giá sản phảm</th>
-                <th>Số lượng</th>
-                <th>Thuộc loại SP</th>
-                <th>Trạng thái</th>
-                <th>Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let p of products; let i = index">
-                <td>{{ p.name }}</td>
-                <td>{{ p.price }}</td>
-                <td>{{ p.quantity }}</td>
-                <!-- <td>
-                  <label class="badge badge-info">{{
-                    getFormattedExpiryDate(p.expiryDate)
-                  }}</label>
-                </td> -->
-                <!-- <td>{{ getCategoryName(p.categoryId) }}</td> -->
-                <td>
-                  <button type="button" class="btn btn-primary btn-icon-text">
-                    <i class="ti-file btn-icon-prepend"></i>
-                    Edit
-                  </button>
-                  <button style="margin-left: 10px" type="button" class="btn btn-outline-primary btn-icon-text">
-                    Delete
-                  </button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <ng-container *ngIf="products && products.length > 0 ;else noData">
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th>Tên sản phẩm</th>
+                  <th>Giá sản phảm</th>
+                  <th>Số lượng</th>
+                  <th>Thuộc loại SP</th>
+                  <th>Trạng thái</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr
+                  *ngFor="let p of products | paginate: { itemsPerPage: itemsPerPage, currentPage: currentPage, totalItems: totalItems }; let i = index">
+                  <td>{{ p.name }}</td>
+                  <td>{{ p.price | currency: "VND" }}</td>
+                  <td>{{ p.quantity }}</td>
+                  <td>{{ getNameProductG(p.productGroupId) }}</td>
+                  <!-- <td>
+                    <la bel class="badge badge-info">{{
+                      getFormattedExpiryDate(p.expiryDate)
+                    }}</la>
+                  </td> -->
+                  <td>
+                    <ng-container *ngIf="p.isActive; else noActive">
+                      <label class="badge badge-success">Hoạt động</label>
+                    </ng-container>
+                    <ng-template #noActive>
+                      <label class="badge badge-warning">Ngưng hoạt động</label>
+                    </ng-template>
+                  </td>
+                  <td>
+                    <button type="button" class="btn btn-primary btn-icon-text">
+                      <i class="ti-file btn-icon-prepend"></i>
+                      Edit
+                    </button>
+                    <button style="margin-left: 10px" type="button" class="btn btn-outline-primary btn-icon-text">
+                      Delete
+                    </button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <pagination-controls class="custom-pagination" previousLabel="Pre" nextLabel="Next"
+              (pageChange)="onPageChange($event)" [autoHide]="true">
+            </pagination-controls>
+          </ng-container>
+
+          <ng-template #noData>
+            <h4 class="card-title text-danger">No data result</h4>
+          </ng-template>
         </div>
       </div>
     </div>
   </div>
-  <!-- <div class="mt-3 mt-lg-0 col-lg-4">
+  <div class="mt-3 mt-lg-0 col-lg-4">
     <div class="card">
       <div class="card-body">
         <div style="display: flex; justify-content: space-between" class="w-100">
-          <h4 class="card-title">Table Category</h4>
+          <h4 class="card-title">Table Product Group</h4>
           <button type="button" class="btn btn-inverse-primary btn-fw">
-            Add Category
+            Add Product Group
           </button>
         </div>
-        <p class="card-description">DbClick category để lọc sản phẩm</p>
+        <p class="card-description">DbClick product group để lọc sản phẩm</p>
         <div class="table-responsive">
           <table class="table table-hover">
             <thead>
               <tr>
-                <th>Category Name</th>
+                <th>Tên danh mục</th>
               </tr>
             </thead>
             <tbody>
-              <tr class="tr-category" *ngFor="let c of categories; let i = index"
-                (dblclick)="selectedCategory(c.categoryId, i + 1)"
-                [ngClass]="isActiveCatogory === c.categoryId ? 'active' : ''">
-                <td>{{ c.categoryName }}</td>
+              <tr style="cursor: pointer;" class="tr-category" *ngFor="let pg of productGroups; let i = index"
+                (dblclick)="selectedProductGroup(pg.id, i + 1)" [ngClass]="isActiveProductG === pg.id ? 'active' : ''">
+                <td>{{ pg.name }}</td>
               </tr>
             </tbody>
           </table>
@@ -80,9 +112,9 @@
         </button>
       </div>
     </div>
-  </div> -->
+  </div>
 </div>
-<div class="container-form-product" *ngIf="isPopupVisible">
+<!-- <div class="container-form-product" *ngIf="isPopupVisible">
   <app-form-create-update-product (isSubmit)="outputAction($event)" [id]="productIdActive"
     class="w-50"></app-form-create-update-product>
-</div>
+</div> -->
